tests/NormalTests/paczka1/fuzzy1/59101416.err
Error in line 10: 25kiK A898 -1,2
Error in line 9: 25kiK A898 82,5
Error in line 12: 25kiK S733 88,8
Error in line 15: 25kiK S856 19,6
Error in line 17: 25kiK A898 41,9
Error in line 31: UQW6b3 S619 17,1
Error in line 38: 25kiK S856 22,5
